changed padding to margin (fixes spacing on single product page)

--- a/themes/holycupcakes/style.css
+++ b/themes/holycupcakes/style.css
@@ -565,7 +565,7 @@ span input,
 }
 
 .blog .post-thumbnail {
-    padding: 20px 0;
+    margin: 20px 0;
 }
 
 .page-title {
